--- a/links/frames/einstein_text.html
+++ b/links/frames/einstein_text.html
@@ -6,8 +6,9 @@
 </head>
 <body bgcolor=black>
 <font color=white face="verdana">
+
 <figure>
-<img src="frame_res/solvay.jpg">
+<img src="frame_res/Solvay.jpg">
 <figcaption> Conferinta Solvay din 1927 - poza de grup</figcaption>
 </figure>
 
