--- a/links/frames/feynman_text.html
+++ b/links/frames/feynman_text.html
@@ -43,6 +43,9 @@
 
 <figure>
 <img src="frame_res/images.jpg">
+<img src="frame_res/images1.jpg">
+<img src="frame_res/images2.jpg">
+<img src="frame_res/images3.jpg">
 </figure>
 
 <p>&nbsp&nbsp&nbsp&nbsp&nbspConsiderand ca nu a acordat deloc atentie laturii artistice a lumii, ci doar celei fizice si matematice, acesta a urmarit cu pasiune cantatul la tobele bongo, sustinand chiar 2 concerte in cadrul unor scenete, dar si pictura, multe dintre picturile sale fiind vandute in cadrul a doua expozitii organizate de catre admiratori ai acestuia</p>
