--- a/links/frames/jobs_text.html
+++ b/links/frames/jobs_text.html
@@ -92,7 +92,7 @@ Mark Markkula a fost cel ce i-a ajutat financiar pe cei doi si pe 3 ianuarie 197
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJobs l-a angajat pe John Sculley ca CEO datorita calitatilor sale din domeniul marketingului insa, datorita unei crize din industria vanzarilor aparuta la sfarsitul lui 1984, relatia dintre cei doi a fost deteriorata, iar la sfarsitului lui mai 1985 - in urma unei lupte interne pentru putere si a anuntarii unui numar semnificativ de disponibilizari, Sculley l-a inlaturat pe Jobs din functia sa de sef al diviziei Macintosh. </p>
 
 <figure>
-<img src="frame_res/nextcube.jpg">
+<img src="frame_res/NeXTcube.jpg">
 <figcaption> NeXT cube </figcaption>
 </figure>
 
