--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <body bgcolor=black>
 
 
-<audio autoplay>
+<!--<audio autoplay>
   <source src="res/1.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
-</audio>
+</audio>-->
 
 <center>
 <img src="res/colaj2.png" border="0" width="463" height="619" orgWidth="463" orgHeight="619" usemap="#thinkdifferent"/>
